task2/ingress.yml
# firstly install ingress-nginx
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/kind/deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /thesame
        pathType: Exact
        backend:
          service:
            name: test-service
            port:
              number: 3000
  defaultBackend:
    service:
      name: test-service
      port:
        number: 3000
